edit error when run yarn dev

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "parcel-bundler": "^1.12.5"
   },
   "scripts": {
-    "dev": "parcel *.html"
+    "dev": "yarn && parcel *.html"
   },
   "devDependencies": {
     "sass": "^1.35.2"
